Update to savegame handling.